--- a/wang-boot-dubborest-starter/pom.xml
+++ b/wang-boot-dubborest-starter/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>wang-boot-dubbo-starter</artifactId>
+    <artifactId>wang-boot-dubborest-starter</artifactId>
     <packaging>jar</packaging>
     <version>0.0.1-SNAPSHOT</version>
 
